cabal-version:      2.4
name:               ExMLP
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Extensible Multi-Level Parser

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke Beukelman
maintainer:         lbeuk@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        -- Listed in order shown on the vscode source tree
        Data.ParserInternals.LinkageHelper,
        Data.ParserInternals.LinkedData,
        Data.ParserInternals.ParsableSegment,
        Data.ParserInternals.ParseManager,
        Data.ParserInternals.ParseResult,
        Data.ParserInternals.ParserHandle,
        Data.ParserInternals.Reciever,
        Data.ParserInternals.Signature,
        Data.IPAddr,
        Data.MACAddr,
        Parser.Impl.ByteAccumulator,
        Parser.LinkageAssisted,
        Parser.Unassisted
    build-depends:
        base ^>=4.17.2.0,
        containers,
        bytestring,
        binary,
        conversion
    hs-source-dirs:   src


executable ExMLP
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        ExMLP,
        base ^>=4.17.2.0,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010


