cabal-version:      2.4
name:               ExMLP
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Extensible Multi-Level Parser

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke Beukelman
maintainer:         lbeuk@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        -- Listed in order shown on the vscode source tree
        Data.ExMLP.LinkageHelper,
        Data.ExMLP.LinkedData,
        Data.ExMLP.ParsableSegment,
        Data.ExMLP.ParseManager,
        Data.ExMLP.ParseResult,
        Data.ExMLP.ParserHandle,
        Data.ExMLP.Reciever,
        Data.ExMLP.Signature,
        Parser.LinkageAssisted,
        Parser.Unassisted
    build-depends:
        base ^>=4.17.2.0,
        containers,
        bytestring,
        binary,
        conversion
    hs-source-dirs:   src


