cabal-version:      2.4
name:               ExPCP
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Extensible Pcap Parser

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke Beukelman
maintainer:         lbeuk@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Data.IPAddr,
        Data.CaptureDict,
        FileParser.ParseFile
        FileParser.PcapParser,
        FileParser,
        ProtocolParser,
        Protocols
    build-depends:
        base ^>=4.17.2.0,
        containers,
        bytestring,
        binary,
        conversion,
        regex-tdfa
    hs-source-dirs:   src


executable ExPCP
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        ExPCP,
        base ^>=4.17.2.0,
        containers
    hs-source-dirs:   app
    default-language: Haskell2010


